<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Edit_one_Activity">

    <TableRow>
        <TextView
            android:id="@+id/textview1_1"
            android:textSize="22sp"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/firstname"/>

        <EditText
            android:id="@+id/edittext1_1"
            android:textSize="22sp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/FN" />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/textview1_2"
            android:textSize="22sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"/>

        <EditText
            android:id="@+id/edittext1_2"
            android:textSize="22sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FN" />
    </TableRow>

    <TableRow>
        <Button
            android:id="@+id/button1_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:text="@string/apply"
            />
    </TableRow>

    <TableRow>
        <Button
            android:id="@+id/button1_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:text="@string/cancel" />
    </TableRow>


</TableLayout>